blog & post update 1

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
         <p id="copyright" class="col-2">{{footer.copyrighttext}}</p>
 
         <!--Social Icons in Footer-->
-        <div class="col-2 social-icons" id="footer-social">
+        <div class="col-2 social-icons footer_icons" id="footer-social">
             <app-social></app-social>
         </div>
         <!--End of Social Icons in Footer-->
