--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -40,6 +40,9 @@
     <li>
         <a routerLink ="/Pricing" (click)="getActiveTab('pricing')" [class.active]="activetab === 'pricing'">Pricing</a>
     </li>
+    <li>
+        <a routerLink ="/Offers" (click)="getActiveTab('offers')" [class.active]="activetab === 'offers'">Offers</a>
+    </li>
 </ul>
 </nav>
 <!--End of Main Navigation-->
