--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -3,13 +3,13 @@
         <div class="post-block-content">
             <h3>{{post.title}}</h3>
             <p class="post-sub"> By {{post.author}} | {{post.publishdate | date: 'dd-MMM-yyyy' }}</p>
-            <div class=".post-featured-image">
+            <!-- <div class=".post-featured-image">
                 <img src="../../assets/images/post-images/{{post.image}}">
-            </div>
+            </div> -->
             <ul>
                 {{post.excert}}
             </ul>
-            <a routerLink="/article/{{post.id}}" class="">Read more...</a>
+            <a routerLink="/Article/{{post.id}}" class="">Read more...</a>
         </div>
 
     <!--End post Block-->
