--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,1 +1,11 @@
-<p>article works!</p>
+       <!--blog Tables-->
+       <section id="blog" class="secondary-color text-center scrollto clearfix ">
+        <div class="row clearfix" *ngIf="post">
+
+            <div class="post-block col-1 wow fadeInUp" data-wow-delay="0.4s">
+              <app-post [post]="post"></app-post>
+            </div>
+        </div>
+        <a (click)="getBack()" class="button">Back</a>
+    </section>
+    <!--End of blog Tables-->
