--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -7,9 +7,13 @@
             <h2 class="section-title">{{blog.title}}</h2>
         </div>
 
-        <div *ngFor="let post of blog.posts "class="post-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+        <div *ngFor="let post of pages"class="post-block col-3 wow fadeInUp" data-wow-delay="0.4s">
             <app-post [post]="post"></app-post>
         </div>
+    </div>
+
+    <div class="row clearfix">
+        <app-pagination [pager]="pager" (setPage)="setPage($event)"></app-pagination>
     </div>
 </section>
 <!--End of blog Tables-->
