--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,9 @@
-.footer_icons {
+ .footer_icons {
     align-items: center;
     position: absolute;
     right: 0px;
-    margin-right: 10px;
-    border: 1px #edd68a solid;
-    border-radius: 10px;
-    padding: 10px;
+    margin-right: 0px;
+    /* border: 1px #edd68a solid;
+    border-radius: 20px; */
+    padding: 5px;
 }
