--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -43,6 +43,9 @@
     <li>
         <a routerLink ="/Offers" (click)="getActiveTab('offers')" [class.active]="activetab === 'offers'">Offers</a>
     </li>
+    <li>
+        <a (click)="logout()">Logout</a>
+    </li>
 </ul>
 </nav>
 <!--End of Main Navigation-->
