--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -3,7 +3,7 @@
     <!--Social Icons in Header-->
     <ul class="social-icons">
         <li *ngFor="let website of socialsites">
-            <a target="{{website.target}}" title="{{website.title}}" href="https://www.facebook.com/username">
+            <a target="{{website.target}}" title="{{website.title}}" href="{{website.link}}">
                 <i class="fa fa-{{website.icon}} fa-1x"></i><span>{{website.title}}</span>
             </a>
         </li>
